manifest_pretrain.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pretrain
  namespace: kkannan1
spec:
      restartPolicy: Never
      nodeName: rkegpu03
      volumes:
        - name: shared-memory-patch
          emptyDir:
            medium: Memory
        - name: imaging-data
          hostPath:
            path: /mnt/ai_s3_synced/imaging
            type: Directory
        - name: teamblackhole
          hostPath:
            path: /mnt/team_blackhole
            type: Directory
        - name: teams3synced
          hostPath:
            path: /mnt/team_s3_synced
            type: Directory
  # template:
  #   spec:
      # nodeName: rkegpu02
      containers:
      - name: radfm1
        imagePullPolicy: Always
        # image: coverahealth.jfrog.io/ai-development-docker/kawshik/llava:noflash
        # image: coverahealth.jfrog.io/ai-development-docker/kawshik/radfm_train:latest
        # image: coverahealth.jfrog.io/ai-development-docker/kawshik/radfm_train:report
        # image: coverahealth.jfrog.io/ai-development-docker/kawshik/radfm_train:all
        image: coverahealth.jfrog.io/ai-development-docker/kawshik/radfm_train:pretrain
        # image: coverahealth.jfrog.io/ai-development-docker/kawshik/radfm_train:lora_finetune
        command: ["python", "train.py",
                  "--output_dir", " /mnt/team_s3_synced/kawshik/radfm_ckpts/pretrain_vision_embedding/b64",
                  # "--output_dir", "/mnt/team_s3_synced/kawshik/radfm_ckpts/after_pretrain_vision_perceiver_finetune/only_lora/b64_2e-4",
                  # "--output_dir","/mnt/team_s3_synced/kawshik/radfm_ckpts/finetune_lora_severity/all_combinations_in_each_epoch/",
                  "--bf16","True",
                  "--num_train_epochs","25",
                  "--batch_size_3D","1",
                  "--batch_size_2D","1",
                  "--lr","[2e-4,5e-5]",
                  "--qtype","findings",
                  "--param_groups_to_train","['embedding_layer']",
                  "--max_seq","1056",
                  "--model_ckpt_load_dir","/mnt/team_s3_synced/msandora/RadFM/pytorch_model.bin",
                  # "--per_device_train_batch_size","8",
                  # "--gradient_accumulation_steps","1024",
                  "--gradient_accumulation_steps","64",
                  # "--per_device_eval_batch_size","8",
                  # "--eval_accumulation_steps","128",
                  "--eval_accumulation_steps","64",
                  # "--tf32","True", 
                  "--evaluation_strategy","epoch", 
                  # "--evaluation_strategy","steps", 
                  # "--eval_steps","380", 
                  # "--eval_steps","1600", 
                  "--metric_for_best_model","eval_rougeLsum",
                  "--save_strategy","epoch",
                  # "--save_strategy","steps",
                  # "--save_steps","380",
                  # "--save_steps","1600",
                  "--save_total_limit","1",
                  # "--learning_rate","7e-5", 
                  # "--learning_rate","2e-3", 
                  "--weight_decay","0.",
                  # "--optim","adafactor",
                  "--warmup_ratio","0.04", 
                  "--lr_scheduler_type","cosine",
                  "--logging_steps","1", 
                  # "--model_max_length","512",
                  # "--gradient_checkpointing","True", 
                  "--dataloader_num_workers","30", 
                  # "--lazy_preprocess","True",
                  "--report_to","wandb", 
                  # "--val_steps","10000",
                  ]
        
        volumeMounts:
        - name: shared-memory-patch
          mountPath: /dev/shm
        - name: imaging-data
          mountPath: /mnt/imaging
        - name: teamblackhole
          mountPath: /mnt/team_blackhole
        - name: teams3synced
          mountPath: /mnt/team_s3_synced

        resources:
          limits:
            # cpu: 12
            # memory: 102400Mi
            # ephemeral-storage: 100Gi 
            nvidia.com/gpu: "1"
          requests:
            # cpu: 12
            # ephemeral-storage: 100Gi 
            # memory: 100000Mi
            nvidia.com/gpu: "1"
      # imagePullSecrets:
      #   - name: ecr-cred
      # restartPolicy: Never
  # backoffLimit: 0
